--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "vercel-build": "echo 'Skipping build on Vercel'"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.2.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.3.0",
     "multer": "^2.0.2"
   },
