--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "vercel-build": "echo 'Skipping build on Vercel'"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csurf": "^1.2.2",
@@ -19,7 +21,8 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.3.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
